--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -1,24 +1,85 @@
+Evolution is change over time. Biological evolution is change over
+time in the genetic composition of populations.  The genetic
+composition of a population, at any given time, is the set of genomes
+that the individuals in our population carry. While, at first, this definition of
+evolution seems at odds with our textbook view of the evolution of phenotypes--such as the
+gradual lengthening of giraffes necks or the beaks of finches-- it is genetic
+change that underpin these changes to the set of phenotypes seen in
+the population. \\
+
+The genetic composition of the population can alter due to the deaths
+of individuals or the migration of individuals in or out of the
+population. If our individuals have different numbers of children,
+this also alters the geneti composition of the population in the next generation. Every new individual born into the population 
+subtly change the genetic composition of the population, as their
+genome is a unique combination of their parents genomes; having passed
+through the process of meiosis where it is shuffled by segregation and
+recombination and changed by mutation. \\
+
+Population genetics is the study of the genetic composition of natural
+populations. It seeks to understand how this composition has been changed
+over time by the forces of mutation, recombination, selection,
+migration, and genetic drift. 
+To understand how these forces interact it is helpful to develop simple
+theoretical models to help our intuition. In these notes we will work
+through these models, and summarize the major areas of
+population genetic theory. While these models will seem na\"{\i}ve,
+and indeed they are, they are incredibly useful and powerful. 
+Throughout the course we will see that these simple models yield
+accurate predictions, such that much of our understanding of the
+process of evolution is built on these models. We will also see how
+these models are incredibly useful for understanding real patterns we
+see in the evolution of phenotypes and genomes, such that much of our
+analysis of evolution, in a range of areas of areas from human genetics to
+conservation, is based on these models. 
+\newpage
 
 \section{Allele and genotype frequencies}
+Population genetics emerged from early efforts to reconcile
+Mendelian genetics with Evolution. 
+Thanks to Mendel and Mendelian genetics (and a lot of prior and subsequent work), we understand that
+the genome of an individual is formed from contribution of
+genomes from the gametes that fused to form zygote. The genomes of the
+gametes was in turn form from a parental genome through meiosis, in particular the segregation and
+recombination of the parental genome. In this chapter we will 
+work through how the basics of Mendelian Genetics play out
+at the population level in sexually reproducing organisms. 
+Part of the power of population genetics comes from the fact that
+the rules of Mendelian genetics are very universal. Therefore, as we
+build up simple models from these basic principals they are grounded
+on a a firm bedrock. \\
+
+Loci and alleles are the basic currency of population genetics--and
+indeed of genetics. Each individual's genetic
+ makeup is defined in their \emph{genome}. A \emph{locus} (plural: \emph{loci})
+ is a specific spot in the genome. A locus may be an entire gene, or a single
+ nucleotide base pair such as A-T. At each locus, there may be multiple genetic
+ variants segregating in the population---these different genetic variants are
+ known as \emph{alleles}. For example, at a particular nucleotide site in the
+ genome, a population may segregate for A-T and G-C base pairs (note that due to
+ the complementary nature of DNA, it will suffice to say the site segregates for
+ A and G variants). If all individuals in the population carry the same allele,
+ we say that the locus is \emph{monomorphic}; at this locus there is no genetic
+ variability in the population. If there are multiple alleles in the population
+ at a locus, we say that this locus is \emph{polymorphic}.
 
 \subsection{Allele frequencies}
 
-Loci and alleles are the basic currency of population genetics--and
-indeed of genetics. A locus (the singular of loci) is a specific location on the genome,
-e.g. a particular DNA pair position in a gene. An allele is the genetic
-information (variant) contained at that position, for example an A-T
-base-pair. As DNA base pairs are complementary, it will suffice to say
-that there is an A allele at this locus. All of the individuals in a
-population (or a sample) may carry the same
-genetic information at this locus, in which case we will say that the
-locus is monomorphic. Or individuals may differ in the genetic
-information they carry at a locus, for example there may be an A
-allele and a T allele at our locus. When multiple alleles are present at a locus
-the locus is said to be polymorphic.  In our example some individuals
-will be be
-homozygote for an A
-allele and some homozygote for a T allele, and some heterozygotes
-(A/T). \\
+%A locus (the singular of loci) is a specific location on the genome,
+%e.g. a particular DNA pair position in a gene. An allele is the genetic
+%information (variant) contained at that position, for example an A-T
+%base-pair. As DNA base pairs are complementary, it will suffice to say
+%that there is an A allele at this locus. All of the individuals in a
+%population (or a sample) may carry the same
+%genetic information at this locus, in which case we will say that the%
+%locus is monomorphic. Or individuals may differ in the genetic
+%information they carry at a locus, for example there may be an A
+%allele and a T allele at our locus. When multiple alleles are present at a locus
+%the locus is said to be polymorphic.  In our example some individuals
+%will be be
+%homozygote for an A
+%allele and some homozygote for a T allele, and some heterozygotes
+%(A/T). \\
 
 
 % TODO: My version, feel free to chop and incorporate Evolution is the process
