--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -51,7 +51,7 @@ on a a firm bedrock. \\
 
 Loci and alleles are the basic currency of population genetics--and
 indeed of genetics. Each individual's genetic
- makeup is defined in their \emph{genome}. A \emph{locus} (plural: \emph{loci})
+ makeup is defined in their genome. A \emph{locus} (plural: \emph{loci})
  is a specific spot in the genome. A locus may be an entire gene, or a single
  nucleotide base pair such as A-T. At each locus, there may be multiple genetic
  variants segregating in the population---these different genetic variants are
