--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -1,18 +1,17 @@
 Evolution is change over time. Biological evolution is change over
-time in the genetic composition of populations.  The genetic
-composition of a population, at any given time, is the set of genomes
+time in the genetic composition of populations. We define the genetic
+composition of a population to be the set of genomes
 that the individuals in our population carry. While, at first, this definition of
-evolution seems at odds with our textbook view of the evolution of phenotypes--such as the
-gradual lengthening of giraffes necks or the beaks of finches-- it is genetic
-change that underpin these changes to the set of phenotypes seen in
-the population. \\
+evolution seems at odds with our textbook view of the evolution of
+phenotypes, such as the changing shape of the finch beaks, it is genetic
+changes that underpin these phenotypic changes.  \\
 
-The genetic composition of the population can alter due to the deaths
+The genetic composition of the population can alter due to the death
 of individuals or the migration of individuals in or out of the
 population. If our individuals have different numbers of children,
-this also alters the geneti composition of the population in the next generation. Every new individual born into the population 
-subtly change the genetic composition of the population, as their
-genome is a unique combination of their parents genomes; having passed
+this also alters the genetic composition of the population in the next generation. Every new individual born into the population 
+subtly changes the genetic composition of the population. Their
+genome is a unique combination of their parents genomes, having passed
 through the process of meiosis where it is shuffled by segregation and
 recombination and changed by mutation. \\
 
@@ -20,9 +19,9 @@ Population genetics is the study of the genetic composition of natural
 populations. It seeks to understand how this composition has been changed
 over time by the forces of mutation, recombination, selection,
 migration, and genetic drift. 
-To understand how these forces interact it is helpful to develop simple
+To understand how these forces interact, it is helpful to develop simple
 theoretical models to help our intuition. In these notes we will work
-through these models, and summarize the major areas of
+through these models and summarize the major areas of
 population genetic theory. While these models will seem na\"{\i}ve,
 and indeed they are, they are incredibly useful and powerful. 
 Throughout the course we will see that these simple models yield
@@ -30,24 +29,26 @@ accurate predictions, such that much of our understanding of the
 process of evolution is built on these models. We will also see how
 these models are incredibly useful for understanding real patterns we
 see in the evolution of phenotypes and genomes, such that much of our
-analysis of evolution, in a range of areas of areas from human genetics to
-conservation, is based on these models. 
+analysis of evolution, in a range of areas from human genetics to
+conservation, is based on these models. Therefore, population genetics is key to
+understanding various applied questions from how medical genetics identifies the genes involved in
+disease to how we preserve small populations (such as a Florida panther) from extinction.
 \newpage
 
 \section{Allele and genotype frequencies}
 Population genetics emerged from early efforts to reconcile
 Mendelian genetics with Evolution. 
 Thanks to Mendel and Mendelian genetics (and a lot of prior and subsequent work), we understand that
-the genome of an individual is formed from contribution of
+the genome of an individual is formed from the contribution of
 genomes from the gametes that fused to form zygote. The genomes of the
-gametes was in turn form from a parental genome through meiosis, in particular the segregation and
+gametes was in turn formed from a parental genome through meiosis, in particular the segregation and
 recombination of the parental genome. In this chapter we will 
 work through how the basics of Mendelian Genetics play out
 at the population level in sexually reproducing organisms. 
 Part of the power of population genetics comes from the fact that
 the rules of Mendelian genetics are very universal. Therefore, as we
 build up simple models from these basic principals they are grounded
-on a a firm bedrock. \\
+on a firm bedrock. \\
 
 Loci and alleles are the basic currency of population genetics--and
 indeed of genetics. Each individual's genetic
