--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -1,9 +1,10 @@
+\section{Introduction}
 Evolution is change over time. Biological evolution is change over
 time in the genetic composition of populations. We define the genetic
 composition of a population to be the set of genomes
 that the individuals in our population carry. While, at first, this definition of
 evolution seems at odds with our textbook view of the evolution of
-phenotypes, such as the changing shape of the finch beaks, it is genetic
+phenotypes, such as the changing shape of the finch beaks over generation, it is genetic
 changes that underpin these phenotypic changes.  \\
 
 The genetic composition of the population can alter due to the death
